# XGL

./: .gitignore  CMakeLists.txt  Doxyfile.in  README.md
cmake/: FindSphinx.cmake  documentation.cmake
doc/guide/: conf.py  index.rst
source/: CMakeLists.txt
source/cli/: CMakeLists.txt
source/cli/src/: xgl.cpp
source/webui/: CMakeLists.txt
source/webui/include/: Session.h  User.h  XGLApplication.h
source/webui/src/: Session.cpp  User.cpp  XGLApplication.cpp  main.cpp
source/xgllib/: CMakeLists.txt
source/xgllib/include/: XGLVersion.h
source/xgllib/include/accounting/payroll/: FUTA.h  OASDI.h  PayPeriods.h
source/xgllib/include/db/: DBSession.h  User.h
source/xgllib/src/accounting/payroll/: PayPeriods.cpp
source/xgllib/src/db/: DBSession.cpp  User.cpp
source/xgllib/unittest/: CMakeLists.txt  FUTA_tst.cpp  OASDI_tst.cpp  PayPeriods_tst.cpp  main.cpp
templates/: Doxyfile.in  version.h.in
